# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  update_checks.sh  urls_dump.sql
.github/workflows/: my_workflow.yml  sonarcloud.yml
page_analyzer/: __init__.py  app.py  app.py.bak  db.py  parser.py  url_normalizer.py
page_analyzer/templates/: index.html  url.html  urls.html
