[project]
name = "hexlet-code"
version = "0.1.0"
description = "Python Project 83"

dependencies = [
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.0.1",
    "psycopg2-binary>=2.9.10",
    "validators>=0.34.0",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.1",
    "ruff>=0.0.350"  # добавляем ruff
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["page_analyzer"]
